--- a/src/views/pdfs/reporte-impresoras-sede.ejs
+++ b/src/views/pdfs/reporte-impresoras-sede.ejs
@@ -7,7 +7,7 @@
     <style>
         /* Estilos específicos para reporte por sede */
         @page {
-            size: A4 landscape;
+            size: Letter landscape;
             margin: 15mm 10mm;
         }
         
