--- a/src/views/usuarios/usuarios.ejs
+++ b/src/views/usuarios/usuarios.ejs
@@ -633,7 +633,7 @@
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label class="form-label">RDP Fiscal*</label>
-                                    <input type="text" class="form-control" name="rdpfis" required placeholder="Ingrese el RDP Fiscal">
+                                    <input type="text" class="form-control" name="rdpfis"  placeholder="Ingrese el RDP Fiscal">
                                     <small class="text-muted">Identificador Fiscal del usuario</small>
                                 </div>
                             </div>
