--- a/src/views/pdfs/reporte-general-impresoras.ejs
+++ b/src/views/pdfs/reporte-general-impresoras.ejs
@@ -6,7 +6,7 @@
     <title><%= titulo %></title>
     <style>
         @page {
-            size: A4 landscape;
+            size: Letter landscape;
             margin: 15mm 10mm;
         }
         
